# ACCURATE-TRAJECTORY-TRACKING-ON-THE-KUKA-YOUBOT-MANIPULATOR

./: README.md
code/: CMakeLists.txt
code/geometry/: arm_base_frame.stl  arm_joint_1.stl  arm_joint_2.stl  arm_joint_3.stl  arm_joint_4.stl  arm_joint_5.stl  gripper_base_frame.stl  gripper_left_finger.stl  gripper_right_finger.stl
code/include/: computedtorquecontrol.hpp  constants.hpp  dynamicmodel.hpp  frictionobserver.hpp  kinematicchain.hpp  movesynchronous.hpp  pidcontroller.hpp  safetycontroller.hpp  simbody.hpp  youbot.hpp  youbot_base.hpp  youbot_hal.hpp
code/src/: CMakeCache.txt  CMakeLists.txt  computedtorquecontrol.cpp  dynamicmodel.cpp  frictionobserver.cpp  kinematicchain.cpp  main.cpp  main_base.cpp  main_simbody.cpp  movesynchronous.cpp  pidcontroller.cpp  safetycontroller.cpp  simbody.cpp  youbot.cpp  youbot_base.cpp
experiments/joint4_manipulator/: pl_joint4_manipulator.m~
experiments/joint4_manipulator/differenttorquesExperiment/: pl_joint4_manipulator.m  pl_joint4_manipulator.m~  tofindratio.txt
experiments/joint4_manipulator/innerlooptuning/: manipulator_joint4_innerloop_0pt5rads.txt  manipulator_joint4_innerloop_1pt53rads.txt  manipulator_joint4_innerloop_1rads.txt  pl_joint4_manipulator.m~
experiments/joint5_manipulator/: pl_joint5_errorplot.m~  pl_joint5_manipulator.m~
experiments/trajectory_generation_plot_approach/: cossin.m  cossin.m~
tex/MT-Report/: BibTex.bib~  MAS Thesis.aux  MAS Thesis.bbl  MAS Thesis.bcf  MAS Thesis.blg  MAS Thesis.dvi  MAS Thesis.nlo  MAS Thesis.out  MAS Thesis.run.xml  MAS Thesis.tex  MAS Thesis.toc  Preamble.tex  ReadMe.txt  ThesisInformation.tex  abstract.aux  abstract.tex  acknowledgment.aux  acknowledgment.tex  appendix.aux  appendix.tex  bibliography.aux  bibliography.bbl  bibliography.blg  bibliography.tex  bibtex.bib  bibtex.bib.bak  concept.aux  concept.blg  concept.tex  conclusion.aux  conclusion.tex  evaluation.aux  evaluation.tex  introduction.aux  introduction.blg  introduction.tex  measurementandresults.aux  measurementandresults.tex  nomenclature.tex  stateoftheart.aux  (+3 more)
tex/MT_presentation/: MT-Rajagopal-presentation.aux  MT-Rajagopal-presentation.nav  MT-Rajagopal-presentation.out  MT-Rajagopal-presentation.snm  MT-Rajagopal-presentation.tex  MT-Rajagopal-presentation.toc
(+24 files in other folders)
